# BeagleBone-V2H

./: .gitignore  Cargo.toml  README.md  config.example.toml  ev_thread.rs  events.json  rustc-ice-2023-09-06T14:50:14.60183678Z-1602937.txt  rustc-ice-2023-09-06T14:50:14.605832904Z-1602938.txt
.cargo/: config.toml
chademo_v2/: Cargo.toml
chademo_v2/src/: chademo.rs  lib.rs
indra_beaglebone/: Cargo.toml  events.json
indra_beaglebone/src/: error.rs  main.rs  snippets
indra_beaglebone/src/api/: index.html  mod.rs  script.js
indra_beaglebone/src/chademo/: can.rs  ev_connect.rs  mod.rs  state.rs
indra_beaglebone/src/data_io/: config.rs  db.rs  keyboard.rs  meter.rs  mod.rs  mqtt.rs  panel.rs
indra_beaglebone/src/eventbus/: mod.rs
indra_beaglebone/src/global_state/: mod.rs
indra_beaglebone/src/macros/: mod.rs
indra_beaglebone/src/pre_charger/: can.rs  fans.rs  mod.rs  pre_thread.rs  pwm.rs
indra_beaglebone/src/scheduler/: mod.rs
src/: error.rs  main.rs
src/api/: mod.rs
src/canbus/: mod.rs  mpsc_can.rs
src/chademo/: can.rs  ev_thread.rs  mod.rs  state.rs
src/data_io/: config.rs  keyboard.rs  meter.rs  mod.rs  mqtt.rs  panel.rs
src/macros/: mod.rs
src/pre_charger/: can.rs  fans.rs  mod.rs  pre_commands.rs  pre_thread.rs  pwm.rs
src/scheduler/: mod.rs
static_html/: index.html  script.js
supporting/: BB-I2C1-00A0.dtbo  BB-I2C2-00A0.dtbo  BB-I2C2-00A0.dts  BB-PWM2-00A0.dtbo  uEnv.txt
svelte-skeleton-ui/: package-lock.json  package.json  tailwind.config.js
svelte-skeleton-ui/src/routes/: +layout.svelte  +page.svelte
svelteKit-old/: package-lock.json  package.json
svelteKit-old/src/componants/: RealTimeData.svelte  websocket.js
svelteKit-old/src/lib/: index.js
svelteKit-old/src/routes/: +page.svelte
