[workspace]
resolver="2" 

members = ["indra_beaglebone",
"chademo_v2"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true 
incremental = false
opt-level = 1         
overflow-checks = true  

[profile.release]
iopt-level = "z"
# lto = "fat"
codegen-units = 1
[patch.crates-io]
chademo_v2 = {path = "chademo_v2"}