[package]
name = "indra_beaglebone"
version = "0.0.1"
edition = "2021"
authors = ["DG <dgaudie@me.com>"]
description = "BBG software implementation for the Indra CHAdeMO bidirectional charger"


[profile.release]
iopt-level = "z"
# lto = "fat"
codegen-units = 1

[features]
default = ["std"]
std =[]
tracing = ["dep:console-subscriber"]
logging-verbose = []


[dependencies]
chademo_v2 = "0"
# tokio = { version = "1", features = ["fs","sync", "signal", "rt-multi-thread"] }
tokio = { version = "1", features = ["full", "tracing"] }
console-subscriber = {version = "0.1.10", optional = true}

futures-util = { version = "0", default-features = false }
tokio-socketcan = "0.3.1"
# libbeaglebone = { version = "0.5.0", default-features = false } # SPI?
# spidev = "0.5.2"
sysfs_gpio = { version = "0.6.1", features = ["async-tokio"] }
serde = { version = "1.0.183", default-features = false, features = [
    "serde_derive",
] }
log = "0.4.19"
simple_logger = "4.2.0"
lazy_static = "1.4.0"
serde_json = "1.0.104"
rumqttc = "0.22.0"
toml = { version = "0.7.6", default-features = false, features = ["parse", "display"] }
futures = "0"
tokio-tungstenite = "0.20.0"
linux-embedded-hal = {git = "https://github.com/rust-embedded/linux-embedded-hal.git", rev= "a0d986b1",features = ["async-tokio"]}
embedded-hal = "=1.0.0-alpha.10"
chrono = {version = "0.4.26", features = ["serde"]}
chrono-tz = {version = "0.8.3", features = ["serde"]}

sqlx = { version = "0.7", features = [ "runtime-tokio" , "sqlx-sqlite" , "sqlite", "chrono"] }
sqlx-core = "0.7"
# sqlx-macros = "0.7"
